--- a/Arian.Querium.SQLite/Arian.Querium.SQLite.csproj
+++ b/Arian.Querium.SQLite/Arian.Querium.SQLite.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Arian.Querium\Arian.Querium.csproj" />
   </ItemGroup>
 
