scaffolded identity pages

--- a/Arian.Quantiq/appsettings.json
+++ b/Arian.Quantiq/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Arian;TrustServerCertificate=True;User Id=sa;Password=sqlpass;"
+    "DefaultConnection": "Server=.;Database=Arian;TrustServerCertificate=True;User Id=sa;Password=sqlpass;",
   },
   "Logging": {
     "LogLevel": {
