--- a/Arian.Quantiq.Application/Arian.Quantiq.Application.csproj
+++ b/Arian.Quantiq.Application/Arian.Quantiq.Application.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
 		<PackageReference Include="MediatR" Version="13.0.0" />
 		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
